--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-fade-in": "^0.1.6",
     "react-scripts": "3.2.0",
     "roboto-fontface": "^0.10.0"
   },
