--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.12.0",
     "react-fade-in": "^0.1.6",
     "react-scripts": "3.2.0",
+    "react-toggle-display": "^2.2.0",
     "roboto-fontface": "^0.10.0"
   },
   "scripts": {
