--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
+    "local-storage": "^2.0.0",
     "material-ui": "^0.20.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
